@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-  <Product Id="*" UpgradeCode="{CBD3C745-FB94-4288-9344-E12571E4325D}" Version="0.16" Language="1033" Name="jfAudio" Manufacturer="Peter Quiring">
+  <Product Id="*" UpgradeCode="{CBD3C745-FB94-4288-9344-E12571E4325D}" Version="0.17" Language="1033" Name="jfAudio" Manufacturer="Peter Quiring">
     <Package InstallerVersion="300" Compressed="yes" InstallScope="perMachine" Platform="x64"/>
     <Media Id="1" Cabinet="files.cab" EmbedCab="yes" />
     <UIRef Id="WixUI_Minimal" />
