@@ -6,7 +6,7 @@
   <property name="src" location="src"/>
   <property name="build" location="classes"/>
   <property name="classpath" location="javaforce.jar"/>
-  <property name="version" value="0.36"/>
+  <property name="version" value="0.37"/>
 
   <property name="debian.depends" value="libderby-java"/>
 
