@@ -1,5 +1,14 @@
 What's new...
 
+Oct 18/2017 : JF 16.4.0 released
+  - added support for Java 9
+    - Java 9 changes keys used in the registry therefore the native launcher could not find it
+  - re-release following apps:
+    - jfPasswords/0.17
+    - jfVideo/0.21
+    - jfAudio/0.17
+    - jPhoneLite/1.14
+
 Aug 4/2017 : JF 16.3.0 released
   - jfDNS/0.6, jfDHCP/0.8, jfProxy/0.7, jfSTUN/0.4 servers
     - fixed configuration not updated
